Fix Discussion overlap styling

--- a/lms/static/sass/discussion/views/_thread.scss
+++ b/lms/static/sass/discussion/views/_thread.scss
@@ -2,7 +2,7 @@
 // ====================
 // NOTE: thread = (post + (responses and comments))
 
-// Table of Contents 
+// Table of Contents
 // * +general thread layout
 // * +thread - wrapper styling
 // * +thread - elements - shared styles
@@ -25,7 +25,7 @@ body.discussion, .discussion-module {
 
     .post-header-content {
       display: inline-block;
-      width: flex-grid(9,12); 
+      width: flex-grid(9,12);
     }
 
     .post-header-actions {
@@ -41,14 +41,12 @@ body.discussion, .discussion-module {
     .response-header-content {
       display: inline-block;
       vertical-align: top;
-      width: flex-grid(11,12);
+      width: flex-grid(10,12);
     }
 
     .response-header-actions {
+      width: flex-grid(2,12);
       @include float(right);
-      @include right($baseline);
-      position: absolute;
-      top: ($baseline);
     }
   }
 
@@ -88,14 +86,14 @@ body.discussion {
 
   .discussion-post, .discussion-response, .discussion-comment {
     @include clearfix();
-    
+
     // thread - images
     .author-image {
       @include margin-right($baseline/2);
       display: inline-block;
-      vertical-align: top; 
+      vertical-align: top;
 
-      // STATE: No profile image 
+      // STATE: No profile image
       &:empty {
         display: none;
       }
@@ -194,4 +192,3 @@ body.discussion, .discussion-thread.expanded {
     box-shadow: 0 1px 3px $shadow;
   }
 }
-
